Finished off adding last CSS styling modules. Styled the bottom form and positioned everything. Enabled scroll on the booklist to prevent it overflowing its container when more books are added.

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,3 +1,11 @@
+.pageContainer {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .appContainer {
   width: 1400px;
   height: 1097px;
@@ -5,5 +13,5 @@
   padding: 0 0 794px;
   border-radius: 4px;
   box-shadow: 0 0 60px 0 #000;
-  background-color: #fff;
+  background-color: #fafafa;
 }
