--- a/src/containers/BooksList.module.css
+++ b/src/containers/BooksList.module.css
@@ -4,6 +4,11 @@
   width: 100%;
 }
 
+.bookList {
+  height: 640px;
+  overflow-y: scroll;
+}
+
 .bookInfo {
   width: 100%;
   display: flex;
@@ -14,12 +19,12 @@
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  border: 1px solid red;
   width: 100%;
   height: 95px;
   margin: 0 0 38px;
   padding: 23px 99px 27px 100px;
   background-color: #fff;
+  border-bottom: 1px solid #dfdfdf;
 }
 
 .titleText {
